Nov 22, 2013 - chris ---------------------------------------------------
o Default Btree node layout for variable length keys and duplicate keys
	was completely rewritten and now uses an up-front index in the
	node

Nov 05, 2013 - chris ---------------------------------------------------
o Removed HAM_DISABLE_VARIABLE_KEYS, HAM_ENABLE_EXTENDED_KEYS; they're no
	longer required. Introduced HAM_KEY_SIZE_UNLIMITED for unlimited/variable
	length keys (the default)

Oct 31, 2013 - chris ---------------------------------------------------
o ham_bench now can generate keys from /usr/share/dict/words

Oct 25, 2013 - chris ---------------------------------------------------
o Added HAM_PARAM_RECORD_SIZE to specify a fixed record size; if it's small
	enough, the records are stored in the leaf and not in a separately
	allocated blob

Oct 22, 2013 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.3

Oct 18, 2013 - chris ---------------------------------------------------
o Introduced a new Btree node layout for fixed length keys types which
	is better optimized for CPU caches and more compact then the
	legacy format

Oct 14, 2013 - chris ---------------------------------------------------
o Fixed invalid memory access when using mmap on pagesizes which are not
	a power of two

Oct 11, 2013 - chris ---------------------------------------------------
o Fixed a btree corruption during SMOs (internal shifts after underflow)

Oct 5, 2013 - chris ---------------------------------------------------
o Integrating "ham_bench" tool for benchmarking and testing

Sep 23, 2013 - chris ---------------------------------------------------
o Introducing "types" for the btree; the default type is HAM_TYPE_BINARY,
	additional types are HAM_TYPE_CUSTOM, HAM_TYPE_UINT32 etc. The types
	influence the internal btree layout.
o ham_db_set_compare_func is only allowed if the key type is HAM_TYPE_CUSTOM;
	otherwise, an error is returned
